Convert weinstein names to lamb (official) names

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "468a29e8-9953-44b6-b577-c9d06ee7fa03",
    "metadata": {},
    "outputs": [],
@@ -97,18 +97,115 @@
     "\n",
     "df_weinstein['name'] = df_weinstein.name.replace({\n",
     "    \"AMALGAMATED TRANSIT UNION COPE\": \"ATU COPE VOLUNTARY ACCOUNT\",\n",
-    "    \"LABORERS DISTRICT COUNCIL OF WESTERN PENNSYLVANIA\": \"WESTERN PENNSYLVANIA LABORERS\",\n",
-    "    \"LABORERS' DISTRICT COUNCIL OF WESTERN PENNSYLVANIA\": \"WESTERN PENNSYLVANIA LABORERS\",\n",
+    "    \"IBEW LOCAL UNION NO. 5 PAC\": \"LOCAL 0005 IBEW PAC\",\n",
     "    \"MIDATLANTIC POLITICAL LEAGUE - MALPA\": \"MID-ATLANTIC LABORERS' POLITICAL LEAGUE\",\n",
-    "    \"STEAMFITTERS LOCAL UNION 449 PAC FUND\": \"STEAMFITTERS LOCAL UNON #449\",\n",
-    "    \"WESTERN PA LABORERS UNION PAC\": \"WESTERN PENNSYLVANIA LABORERS\",\n",
-    "    \"WESTERN PENNSYLVANIA LABORERS' PAC\": \"WESTERN PENNSYLVANIA LABORERS\"\n",
+    "    \"STEAMFITTERS LOCAL UNON #449\": \"LOCAL 0449 STEAMFITTERS UNION PAC\",\n",
+    "    \"STEAMFITTERS LOCAL UNION 449 PAC FUND\": \"LOCAL 0449 STEAMFITTERS UNION PAC\",\n",
+    "    \"PLUMBERS LOCAL UNION NO. 27 PAC\": \"LOCAL 0027 PLUMBERS UNION PAC\",\n",
+    "    \"BRICKLAYERS &AMP; ALLIED CRAFTWORKERS LOCAL 9 PAC\": \"LOCAL 0009 BRICKLAYERS & ALLIED CRAFTWORKERS PA PAC\",\n",
+    "    \"PITTSBURGH FIRE FIGHTERS LOCAL NO 1 FIRE PAC ACCOUNT\": \"PGH FIRE FIGHTERS LOCAL #1 FIRE PAC\",\n",
+    "    \"TEAMSTERS LOCAL UNION 249 - DRIVE FUND\": \"LOCAL 0249 TEAMSTERS DRIVE\",\n",
+    "    \"U.W.U.A. LOCAL 433 PAC\": \"LOCAL 0433 UWUA (UTILITY WORKERS)\",\n",
+    "    \"TEAMSTER JOINT COUNCIL 40 PAC\": \"TEAMSTERS JT COUNCIL 40 PAC\",\n",
+    "    \"AFSCME COUNCIL 13 POLITICAL &AMP; LEGISLATIVE\": \"AFSCME COUNCIL 13 POL & LEG ACCT\",\n",
+    "    # Laborers\n",
+    "    \"LABORERS DISTRICT COUNCIL OF WESTERN PENNSYLVANIA\": \"WESTERN PENNSYLVANIA LABORERS 2019 PAC\",\n",
+    "    \"LABORERS' DISTRICT COUNCIL OF WESTERN PENNSYLVANIA\": \"WESTERN PENNSYLVANIA LABORERS 2019 PAC\",\n",
+    "    \"WESTERN PA LABORERS UNION PAC\": \"WESTERN PENNSYLVANIA LABORERS 2019 PAC\",\n",
+    "    \"WESTERN PENNSYLVANIA LABORERS\": \"WESTERN PENNSYLVANIA LABORERS 2019 PAC\",\n",
+    "    \"WESTERN PENNSYLVANIA LABORERS' PAC\": \"WESTERN PENNSYLVANIA LABORERS 2019 PAC\",\n",
     "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "id": "96447f1f-1bad-4362-8ab9-dfce442c108c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>address1</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>zipcode</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>CARPENTERS LEGISLATIVE PROGRAM OF GREATER PA</td>\n",
+       "      <td>650 RIDGE ROAD  STE. 200</td>\n",
+       "      <td>PITTSBURGH</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>15205</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>CARPENTERS LEGISLATIVE PROGRAM OF GREATER PA</td>\n",
+       "      <td>650 RIDGE ROAD  STE. 200</td>\n",
+       "      <td>PITTSBURGH</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>15205</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             name                  address1  \\\n",
+       "116  CARPENTERS LEGISLATIVE PROGRAM OF GREATER PA  650 RIDGE ROAD  STE. 200   \n",
+       "117  CARPENTERS LEGISLATIVE PROGRAM OF GREATER PA  650 RIDGE ROAD  STE. 200   \n",
+       "\n",
+       "           city state zipcode  amount month day  year  \n",
+       "116  PITTSBURGH    PA   15205  2000.0    10  18  2018  \n",
+       "117  PITTSBURGH    PA   15205   500.0    10  18  2018  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_weinstein[df_weinstein.name.str.contains('CARPENTER')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "951ccabf-318a-4bd6-a59a-0451ebd6431b",
    "metadata": {},
    "outputs": [
@@ -141,7 +238,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>321</th>\n",
-       "      <td>WESTERN PENNSYLVANIA LABORERS</td>\n",
+       "      <td>WESTERN PENNSYLVANIA LABORERS 2019 PAC</td>\n",
        "      <td>90000.0</td>\n",
        "      <td>0.180471</td>\n",
        "    </tr>\n",
@@ -152,32 +249,32 @@
        "      <td>0.075425</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>104</th>\n",
+       "      <th>103</th>\n",
        "      <td>FNB CORPORATION PAC</td>\n",
        "      <td>22500.0</td>\n",
        "      <td>0.045118</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>237</th>\n",
+       "      <th>241</th>\n",
        "      <td>MID-ATLANTIC LABORERS' POLITICAL LEAGUE</td>\n",
        "      <td>22000.0</td>\n",
        "      <td>0.044115</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>114</th>\n",
+       "      <th>113</th>\n",
        "      <td>FRIENDS OF RANDY MARTINI</td>\n",
        "      <td>20000.0</td>\n",
        "      <td>0.040105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>289</th>\n",
-       "      <td>STEAMFITTERS LOCAL UNON #449</td>\n",
+       "      <th>203</th>\n",
+       "      <td>LOCAL 0449 STEAMFITTERS UNION PAC</td>\n",
        "      <td>15000.0</td>\n",
        "      <td>0.030078</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>IBEW LOCAL UNION NO. 5 PAC</td>\n",
+       "      <th>198</th>\n",
+       "      <td>LOCAL 0005 IBEW PAC</td>\n",
        "      <td>10000.0</td>\n",
        "      <td>0.020052</td>\n",
        "    </tr>\n",
@@ -188,13 +285,13 @@
        "      <td>0.020052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>148</th>\n",
+       "      <th>146</th>\n",
        "      <td>JAMES P. GRANT</td>\n",
        "      <td>10000.0</td>\n",
        "      <td>0.020052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>42</th>\n",
+       "      <th>41</th>\n",
        "      <td>CHARLES HAMMEL III</td>\n",
        "      <td>7500.0</td>\n",
        "      <td>0.015039</td>\n",
@@ -205,19 +302,19 @@
       ],
       "text/plain": [
        "                                        name   amount       pct\n",
-       "321            WESTERN PENNSYLVANIA LABORERS  90000.0  0.180471\n",
+       "321   WESTERN PENNSYLVANIA LABORERS 2019 PAC  90000.0  0.180471\n",
        "22                ATU COPE VOLUNTARY ACCOUNT  37614.0  0.075425\n",
-       "104                      FNB CORPORATION PAC  22500.0  0.045118\n",
-       "237  MID-ATLANTIC LABORERS' POLITICAL LEAGUE  22000.0  0.044115\n",
-       "114                 FRIENDS OF RANDY MARTINI  20000.0  0.040105\n",
-       "289             STEAMFITTERS LOCAL UNON #449  15000.0  0.030078\n",
-       "136               IBEW LOCAL UNION NO. 5 PAC  10000.0  0.020052\n",
+       "103                      FNB CORPORATION PAC  22500.0  0.045118\n",
+       "241  MID-ATLANTIC LABORERS' POLITICAL LEAGUE  22000.0  0.044115\n",
+       "113                 FRIENDS OF RANDY MARTINI  20000.0  0.040105\n",
+       "203        LOCAL 0449 STEAMFITTERS UNION PAC  15000.0  0.030078\n",
+       "198                      LOCAL 0005 IBEW PAC  10000.0  0.020052\n",
        "10      AMALGAMATED TRANSIT UNION - LOCAL 85  10000.0  0.020052\n",
-       "148                           JAMES P. GRANT  10000.0  0.020052\n",
-       "42                        CHARLES HAMMEL III   7500.0  0.015039"
+       "146                           JAMES P. GRANT  10000.0  0.020052\n",
+       "41                        CHARLES HAMMEL III   7500.0  0.015039"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "7da9f58c-0b3a-4e19-aa40-0cf32867f147",
    "metadata": {},
    "outputs": [],
@@ -262,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "8e2bd0ab-961c-4db8-a466-5cab86fb5050",
    "metadata": {},
    "outputs": [
@@ -366,7 +463,7 @@
        "REPRESENT PAC                            5500.00  0.017076"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "93e6b7ed-fe94-4cef-b19c-995ce3ab9979",
    "metadata": {},
    "outputs": [],
@@ -429,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "10d2b694-967e-4f0a-aba8-452877d4c235",
    "metadata": {},
    "outputs": [],
@@ -454,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "4a8d2591-aaaf-4efa-8617-cceffc5ff1c1",
    "metadata": {},
    "outputs": [
@@ -574,7 +671,7 @@
        "71   9300158          INTL BROTHERHOOD BOILERMAKERS 154   7100.0  0.018041"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "d5a9fcaa-f90d-4899-98e4-82768c553906",
    "metadata": {},
    "outputs": [
@@ -645,27 +742,111 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>AFSCME COUNCIL 13 POL &amp; LEG ACCT</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LOCAL 0005 IBEW PAC</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>56250.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LOCAL 0009 BRICKLAYERS &amp; ALLIED CRAFTWORKERS P...</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>7000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LOCAL 0027 PLUMBERS UNION PAC</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>48550.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LOCAL 0249 TEAMSTERS DRIVE</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1050.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>LOCAL 0433 UWUA (UTILITY WORKERS)</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>LOCAL 0449 STEAMFITTERS UNION PAC</td>\n",
+       "      <td>15000.0</td>\n",
+       "      <td>40350.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>PGH FIRE FIGHTERS LOCAL #1 FIRE PAC</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
        "      <td>SALVO PAC</td>\n",
        "      <td>1000.0</td>\n",
        "      <td>3100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>9</th>\n",
+       "      <td>TEAMSTERS JT COUNCIL 40 PAC</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
        "      <td>TEAMSTERS LOCAL 205 PAC</td>\n",
        "      <td>250.0</td>\n",
        "      <td>200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>WESTERN PENNSYLVANIA LABORERS 2019 PAC</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>10000.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      name  amount_wein  amount_lamb\n",
-       "0                SALVO PAC       1000.0       3100.0\n",
-       "1  TEAMSTERS LOCAL 205 PAC        250.0        200.0"
+       "                                                 name  amount_wein  \\\n",
+       "0                    AFSCME COUNCIL 13 POL & LEG ACCT        350.0   \n",
+       "1                                 LOCAL 0005 IBEW PAC      10000.0   \n",
+       "2   LOCAL 0009 BRICKLAYERS & ALLIED CRAFTWORKERS P...        500.0   \n",
+       "3                       LOCAL 0027 PLUMBERS UNION PAC       1000.0   \n",
+       "4                          LOCAL 0249 TEAMSTERS DRIVE       1000.0   \n",
+       "5                   LOCAL 0433 UWUA (UTILITY WORKERS)        500.0   \n",
+       "6                   LOCAL 0449 STEAMFITTERS UNION PAC      15000.0   \n",
+       "7                 PGH FIRE FIGHTERS LOCAL #1 FIRE PAC       2000.0   \n",
+       "8                                           SALVO PAC       1000.0   \n",
+       "9                         TEAMSTERS JT COUNCIL 40 PAC        200.0   \n",
+       "10                            TEAMSTERS LOCAL 205 PAC        250.0   \n",
+       "11             WESTERN PENNSYLVANIA LABORERS 2019 PAC      90000.0   \n",
+       "\n",
+       "    amount_lamb  \n",
+       "0         200.0  \n",
+       "1       56250.0  \n",
+       "2        7000.0  \n",
+       "3       48550.0  \n",
+       "4        1050.0  \n",
+       "5        1000.0  \n",
+       "6       40350.0  \n",
+       "7        5000.0  \n",
+       "8        3100.0  \n",
+       "9         500.0  \n",
+       "10        200.0  \n",
+       "11      10000.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
