--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "468a29e8-9953-44b6-b577-c9d06ee7fa03",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "96447f1f-1bad-4362-8ab9-dfce442c108c",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
        "117  PITTSBURGH    PA   15205   500.0    10  18  2018  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "951ccabf-318a-4bd6-a59a-0451ebd6431b",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
        "41                        CHARLES HAMMEL III   7500.0  0.015039"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "7da9f58c-0b3a-4e19-aa40-0cf32867f147",
    "metadata": {},
    "outputs": [],
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "8e2bd0ab-961c-4db8-a466-5cab86fb5050",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
        "REPRESENT PAC                            5500.00  0.017076"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "93e6b7ed-fe94-4cef-b19c-995ce3ab9979",
    "metadata": {},
    "outputs": [],
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "10d2b694-967e-4f0a-aba8-452877d4c235",
    "metadata": {},
    "outputs": [],
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "4a8d2591-aaaf-4efa-8617-cceffc5ff1c1",
    "metadata": {},
    "outputs": [
@@ -584,70 +584,70 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>59</th>\n",
+       "      <th>40</th>\n",
        "      <td>8400326</td>\n",
        "      <td>LOCAL 0005 IBEW PAC</td>\n",
        "      <td>56250.0</td>\n",
        "      <td>0.142927</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>51</th>\n",
+       "      <th>32</th>\n",
        "      <td>8000488</td>\n",
        "      <td>LOCAL 0027 PLUMBERS UNION PAC</td>\n",
        "      <td>48550.0</td>\n",
        "      <td>0.123362</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>64</th>\n",
+       "      <th>45</th>\n",
        "      <td>8600238</td>\n",
        "      <td>LOCAL 0449 STEAMFITTERS UNION PAC</td>\n",
        "      <td>40350.0</td>\n",
        "      <td>0.102526</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62</th>\n",
+       "      <th>43</th>\n",
        "      <td>8600169</td>\n",
        "      <td>LOCAL 0066 PAC CLUB</td>\n",
        "      <td>37000.0</td>\n",
        "      <td>0.094014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46</th>\n",
+       "      <th>27</th>\n",
        "      <td>7900296</td>\n",
        "      <td>LOCAL 0690 PLUMBERS UNION POL ACTION FUND</td>\n",
        "      <td>27500.0</td>\n",
        "      <td>0.069875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>54</th>\n",
+       "      <th>35</th>\n",
        "      <td>8100217</td>\n",
        "      <td>LOCAL 0542 IUOE OPER ENG (NORRISTN)</td>\n",
        "      <td>25000.0</td>\n",
        "      <td>0.063523</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>82</th>\n",
+       "      <th>56</th>\n",
        "      <td>9500250</td>\n",
        "      <td>GREATER PA CARPENTERS PAC</td>\n",
        "      <td>18050.0</td>\n",
        "      <td>0.045864</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>58</th>\n",
+       "      <th>39</th>\n",
        "      <td>8200660</td>\n",
        "      <td>INTL UNION PAINTERS ALLIED TRADE</td>\n",
        "      <td>14000.0</td>\n",
        "      <td>0.035573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
+       "      <th>20</th>\n",
        "      <td>20190173</td>\n",
        "      <td>WESTERN PENNSYLVANIA LABORERS 2019 PAC</td>\n",
        "      <td>10000.0</td>\n",
        "      <td>0.025409</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>71</th>\n",
+       "      <th>52</th>\n",
        "      <td>9300158</td>\n",
        "      <td>INTL BROTHERHOOD BOILERMAKERS 154</td>\n",
        "      <td>7100.0</td>\n",
@@ -659,28 +659,34 @@
       ],
       "text/plain": [
        "      number                                       name   amount       pct\n",
-       "59   8400326                        LOCAL 0005 IBEW PAC  56250.0  0.142927\n",
-       "51   8000488              LOCAL 0027 PLUMBERS UNION PAC  48550.0  0.123362\n",
-       "64   8600238          LOCAL 0449 STEAMFITTERS UNION PAC  40350.0  0.102526\n",
-       "62   8600169                        LOCAL 0066 PAC CLUB  37000.0  0.094014\n",
-       "46   7900296  LOCAL 0690 PLUMBERS UNION POL ACTION FUND  27500.0  0.069875\n",
-       "54   8100217        LOCAL 0542 IUOE OPER ENG (NORRISTN)  25000.0  0.063523\n",
-       "82   9500250                  GREATER PA CARPENTERS PAC  18050.0  0.045864\n",
-       "58   8200660           INTL UNION PAINTERS ALLIED TRADE  14000.0  0.035573\n",
-       "39  20190173     WESTERN PENNSYLVANIA LABORERS 2019 PAC  10000.0  0.025409\n",
-       "71   9300158          INTL BROTHERHOOD BOILERMAKERS 154   7100.0  0.018041"
+       "40   8400326                        LOCAL 0005 IBEW PAC  56250.0  0.142927\n",
+       "32   8000488              LOCAL 0027 PLUMBERS UNION PAC  48550.0  0.123362\n",
+       "45   8600238          LOCAL 0449 STEAMFITTERS UNION PAC  40350.0  0.102526\n",
+       "43   8600169                        LOCAL 0066 PAC CLUB  37000.0  0.094014\n",
+       "27   7900296  LOCAL 0690 PLUMBERS UNION POL ACTION FUND  27500.0  0.069875\n",
+       "35   8100217        LOCAL 0542 IUOE OPER ENG (NORRISTN)  25000.0  0.063523\n",
+       "56   9500250                  GREATER PA CARPENTERS PAC  18050.0  0.045864\n",
+       "39   8200660           INTL UNION PAINTERS ALLIED TRADE  14000.0  0.035573\n",
+       "20  20190173     WESTERN PENNSYLVANIA LABORERS 2019 PAC  10000.0  0.025409\n",
+       "52   9300158          INTL BROTHERHOOD BOILERMAKERS 154   7100.0  0.018041"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "committees = pd.read_csv(\n",
+    "    'input/committees.csv',\n",
+    "    dtype={'Committee Number': 'str'},\n",
+    "    usecols=['Committee Number', 'Committee Name'])\n",
+    "committees = committees.drop_duplicates('Committee Number', keep='first')\n",
+    "\n",
     "df_lamb_topcontribs = df_lamb.groupby('filer_id').amount.sum().to_frame()\n",
     "df_lamb_topcontribs = pd.merge(\n",
     "    df_lamb_topcontribs,\n",
-    "    pd.read_csv('input/committees.csv', dtype={'Committee Number': 'str'}, usecols=['Committee Number', 'Committee Name']),\n",
+    "    committees,\n",
     "    left_on='filer_id',\n",
     "    right_on='Committee Number')\n",
     "\n",
@@ -709,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "d5a9fcaa-f90d-4899-98e4-82768c553906",
    "metadata": {},
    "outputs": [
@@ -846,7 +852,7 @@
        "11      10000.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
