--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -696,14 +696,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>AFSCME COUNCIL 13 POL &amp; LEG ACCT</th>\n",
-       "      <td>350.0</td>\n",
-       "      <td>0.000702</td>\n",
+       "      <th>WESTERN PENNSYLVANIA LABORERS 2019 PAC</th>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>0.180471</td>\n",
        "      <td>2500.0</td>\n",
        "      <td>0.007762</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>7900006</td>\n",
-       "      <td>0.000508</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>20190173</td>\n",
+       "      <td>0.025409</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LOCAL 0249 TEAMSTERS DRIVE</th>\n",
@@ -716,14 +716,14 @@
        "      <td>0.002668</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>WESTERN PENNSYLVANIA LABORERS 2019 PAC</th>\n",
-       "      <td>90000.0</td>\n",
-       "      <td>0.180471</td>\n",
+       "      <th>AFSCME COUNCIL 13 POL &amp; LEG ACCT</th>\n",
+       "      <td>350.0</td>\n",
+       "      <td>0.000702</td>\n",
        "      <td>2500.0</td>\n",
        "      <td>0.007762</td>\n",
-       "      <td>10000.0</td>\n",
-       "      <td>20190173</td>\n",
-       "      <td>0.025409</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>7900006</td>\n",
+       "      <td>0.000508</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -732,21 +732,21 @@
       "text/plain": [
        "                                        amount_wein  pct_wein  amount_inna  \\\n",
        "name                                                                         \n",
-       "AFSCME COUNCIL 13 POL & LEG ACCT              350.0  0.000702       2500.0   \n",
-       "LOCAL 0249 TEAMSTERS DRIVE                   1000.0  0.002005       1500.0   \n",
        "WESTERN PENNSYLVANIA LABORERS 2019 PAC      90000.0  0.180471       2500.0   \n",
+       "LOCAL 0249 TEAMSTERS DRIVE                   1000.0  0.002005       1500.0   \n",
+       "AFSCME COUNCIL 13 POL & LEG ACCT              350.0  0.000702       2500.0   \n",
        "\n",
        "                                        pct_inna  amount_lamb    number  \\\n",
        "name                                                                      \n",
-       "AFSCME COUNCIL 13 POL & LEG ACCT        0.007762        200.0   7900006   \n",
-       "LOCAL 0249 TEAMSTERS DRIVE              0.004657       1050.0   7900662   \n",
        "WESTERN PENNSYLVANIA LABORERS 2019 PAC  0.007762      10000.0  20190173   \n",
+       "LOCAL 0249 TEAMSTERS DRIVE              0.004657       1050.0   7900662   \n",
+       "AFSCME COUNCIL 13 POL & LEG ACCT        0.007762        200.0   7900006   \n",
        "\n",
        "                                        pct_lamb  \n",
        "name                                              \n",
-       "AFSCME COUNCIL 13 POL & LEG ACCT        0.000508  \n",
+       "WESTERN PENNSYLVANIA LABORERS 2019 PAC  0.025409  \n",
        "LOCAL 0249 TEAMSTERS DRIVE              0.002668  \n",
-       "WESTERN PENNSYLVANIA LABORERS 2019 PAC  0.025409  "
+       "AFSCME COUNCIL 13 POL & LEG ACCT        0.000508  "
       ]
      },
      "execution_count": 11,
@@ -755,7 +755,9 @@
     }
    ],
    "source": [
-    "joined[(joined.amount_wein.notna()) & (joined.amount_inna.notna()) & (joined.amount_lamb.notna())]"
+    "joined[\n",
+    "    (joined.amount_wein.notna()) & (joined.amount_inna.notna()) & (joined.amount_lamb.notna())\n",
+    "].sort_values(by='pct_wein', ascending=False)"
    ]
   },
   {
@@ -806,26 +808,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1776 PAC (UFCW)</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>750.0</td>\n",
-       "      <td>0.002329</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>8200631</td>\n",
-       "      <td>0.000508</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DENTONS COHEN AND GRIGSBY PAC</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>750.0</td>\n",
-       "      <td>0.002329</td>\n",
-       "      <td>500.0</td>\n",
-       "      <td>8500209</td>\n",
-       "      <td>0.001270</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>GREATER PA CARPENTERS PAC</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -856,6 +838,26 @@
        "      <td>0.005082</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>DENTONS COHEN AND GRIGSBY PAC</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>750.0</td>\n",
+       "      <td>0.002329</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>8500209</td>\n",
+       "      <td>0.001270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1776 PAC (UFCW)</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>750.0</td>\n",
+       "      <td>0.002329</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>8200631</td>\n",
+       "      <td>0.000508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>SEIU HEALTHCARE PA COPE</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -872,29 +874,29 @@
       "text/plain": [
        "                                        amount_wein  pct_wein  amount_inna  \\\n",
        "name                                                                         \n",
-       "1776 PAC (UFCW)                                 NaN       NaN        750.0   \n",
-       "DENTONS COHEN AND GRIGSBY PAC                   NaN       NaN        750.0   \n",
        "GREATER PA CARPENTERS PAC                       NaN       NaN       1000.0   \n",
        "MALADY & WOOTEN PAC                             NaN       NaN        250.0   \n",
        "PFT POL ACTION FUND (PGH FED TEACHERS)          NaN       NaN       3500.0   \n",
+       "DENTONS COHEN AND GRIGSBY PAC                   NaN       NaN        750.0   \n",
+       "1776 PAC (UFCW)                                 NaN       NaN        750.0   \n",
        "SEIU HEALTHCARE PA COPE                         NaN       NaN      11250.0   \n",
        "\n",
        "                                        pct_inna  amount_lamb    number  \\\n",
        "name                                                                      \n",
-       "1776 PAC (UFCW)                         0.002329        200.0   8200631   \n",
-       "DENTONS COHEN AND GRIGSBY PAC           0.002329        500.0   8500209   \n",
        "GREATER PA CARPENTERS PAC               0.003105      18050.0   9500250   \n",
        "MALADY & WOOTEN PAC                     0.000776       2750.0   9700250   \n",
        "PFT POL ACTION FUND (PGH FED TEACHERS)  0.010867       2000.0   7900476   \n",
+       "DENTONS COHEN AND GRIGSBY PAC           0.002329        500.0   8500209   \n",
+       "1776 PAC (UFCW)                         0.002329        200.0   8200631   \n",
        "SEIU HEALTHCARE PA COPE                 0.034929         50.0  20150138   \n",
        "\n",
        "                                        pct_lamb  \n",
        "name                                              \n",
-       "1776 PAC (UFCW)                         0.000508  \n",
-       "DENTONS COHEN AND GRIGSBY PAC           0.001270  \n",
        "GREATER PA CARPENTERS PAC               0.045864  \n",
        "MALADY & WOOTEN PAC                     0.006988  \n",
        "PFT POL ACTION FUND (PGH FED TEACHERS)  0.005082  \n",
+       "DENTONS COHEN AND GRIGSBY PAC           0.001270  \n",
+       "1776 PAC (UFCW)                         0.000508  \n",
        "SEIU HEALTHCARE PA COPE                 0.000127  "
       ]
      },
@@ -904,7 +906,9 @@
     }
    ],
    "source": [
-    "joined[(joined.amount_wein.isna()) & (joined.amount_inna.notna()) & (joined.amount_lamb.notna())]"
+    "joined[\n",
+    "    (joined.amount_wein.isna()) & (joined.amount_inna.notna()) & (joined.amount_lamb.notna())\n",
+    "].sort_values(by='pct_lamb', ascending=False)"
    ]
   },
   {
@@ -965,16 +969,6 @@
        "      <td>0.142927</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>LOCAL 0009 BRICKLAYERS &amp; ALLIED CRAFTWORKERS PA PAC</th>\n",
-       "      <td>500.0</td>\n",
-       "      <td>0.001003</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7000.0</td>\n",
-       "      <td>2000142</td>\n",
-       "      <td>0.017786</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>LOCAL 0027 PLUMBERS UNION PAC</th>\n",
        "      <td>1000.0</td>\n",
        "      <td>0.002005</td>\n",
@@ -985,16 +979,6 @@
        "      <td>0.123362</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>LOCAL 0433 UWUA (UTILITY WORKERS)</th>\n",
-       "      <td>500.0</td>\n",
-       "      <td>0.001003</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>9600256</td>\n",
-       "      <td>0.002541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>LOCAL 0449 STEAMFITTERS UNION PAC</th>\n",
        "      <td>15000.0</td>\n",
        "      <td>0.030078</td>\n",
@@ -1003,6 +987,16 @@
        "      <td>40350.0</td>\n",
        "      <td>8600238</td>\n",
        "      <td>0.102526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LOCAL 0009 BRICKLAYERS &amp; ALLIED CRAFTWORKERS PA PAC</th>\n",
+       "      <td>500.0</td>\n",
+       "      <td>0.001003</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7000.0</td>\n",
+       "      <td>2000142</td>\n",
+       "      <td>0.017786</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PGH FIRE FIGHTERS LOCAL #1 FIRE PAC</th>\n",
@@ -1023,6 +1017,16 @@
        "      <td>3100.0</td>\n",
        "      <td>20170097</td>\n",
        "      <td>0.007877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LOCAL 0433 UWUA (UTILITY WORKERS)</th>\n",
+       "      <td>500.0</td>\n",
+       "      <td>0.001003</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>9600256</td>\n",
+       "      <td>0.002541</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TEAMSTERS JT COUNCIL 40 PAC</th>\n",
@@ -1052,48 +1056,48 @@
        "                                                    amount_wein  pct_wein  \\\n",
        "name                                                                        \n",
        "LOCAL 0005 IBEW PAC                                     10000.0  0.020052   \n",
-       "LOCAL 0009 BRICKLAYERS & ALLIED CRAFTWORKERS PA...        500.0  0.001003   \n",
        "LOCAL 0027 PLUMBERS UNION PAC                            1000.0  0.002005   \n",
-       "LOCAL 0433 UWUA (UTILITY WORKERS)                         500.0  0.001003   \n",
        "LOCAL 0449 STEAMFITTERS UNION PAC                       15000.0  0.030078   \n",
+       "LOCAL 0009 BRICKLAYERS & ALLIED CRAFTWORKERS PA...        500.0  0.001003   \n",
        "PGH FIRE FIGHTERS LOCAL #1 FIRE PAC                      2000.0  0.004010   \n",
        "SALVO PAC                                                1000.0  0.002005   \n",
+       "LOCAL 0433 UWUA (UTILITY WORKERS)                         500.0  0.001003   \n",
        "TEAMSTERS JT COUNCIL 40 PAC                               200.0  0.000401   \n",
        "TEAMSTERS LOCAL 205 PAC                                   250.0  0.000501   \n",
        "\n",
        "                                                    amount_inna  pct_inna  \\\n",
        "name                                                                        \n",
        "LOCAL 0005 IBEW PAC                                         NaN       NaN   \n",
-       "LOCAL 0009 BRICKLAYERS & ALLIED CRAFTWORKERS PA...          NaN       NaN   \n",
        "LOCAL 0027 PLUMBERS UNION PAC                               NaN       NaN   \n",
-       "LOCAL 0433 UWUA (UTILITY WORKERS)                           NaN       NaN   \n",
        "LOCAL 0449 STEAMFITTERS UNION PAC                           NaN       NaN   \n",
+       "LOCAL 0009 BRICKLAYERS & ALLIED CRAFTWORKERS PA...          NaN       NaN   \n",
        "PGH FIRE FIGHTERS LOCAL #1 FIRE PAC                         NaN       NaN   \n",
        "SALVO PAC                                                   NaN       NaN   \n",
+       "LOCAL 0433 UWUA (UTILITY WORKERS)                           NaN       NaN   \n",
        "TEAMSTERS JT COUNCIL 40 PAC                                 NaN       NaN   \n",
        "TEAMSTERS LOCAL 205 PAC                                     NaN       NaN   \n",
        "\n",
        "                                                    amount_lamb    number  \\\n",
        "name                                                                        \n",
        "LOCAL 0005 IBEW PAC                                     56250.0   8400326   \n",
-       "LOCAL 0009 BRICKLAYERS & ALLIED CRAFTWORKERS PA...       7000.0   2000142   \n",
        "LOCAL 0027 PLUMBERS UNION PAC                           48550.0   8000488   \n",
-       "LOCAL 0433 UWUA (UTILITY WORKERS)                        1000.0   9600256   \n",
        "LOCAL 0449 STEAMFITTERS UNION PAC                       40350.0   8600238   \n",
+       "LOCAL 0009 BRICKLAYERS & ALLIED CRAFTWORKERS PA...       7000.0   2000142   \n",
        "PGH FIRE FIGHTERS LOCAL #1 FIRE PAC                      5000.0   8600183   \n",
        "SALVO PAC                                                3100.0  20170097   \n",
+       "LOCAL 0433 UWUA (UTILITY WORKERS)                        1000.0   9600256   \n",
        "TEAMSTERS JT COUNCIL 40 PAC                               500.0   9100226   \n",
        "TEAMSTERS LOCAL 205 PAC                                   200.0  20130205   \n",
        "\n",
        "                                                    pct_lamb  \n",
        "name                                                          \n",
        "LOCAL 0005 IBEW PAC                                 0.142927  \n",
-       "LOCAL 0009 BRICKLAYERS & ALLIED CRAFTWORKERS PA...  0.017786  \n",
        "LOCAL 0027 PLUMBERS UNION PAC                       0.123362  \n",
-       "LOCAL 0433 UWUA (UTILITY WORKERS)                   0.002541  \n",
        "LOCAL 0449 STEAMFITTERS UNION PAC                   0.102526  \n",
+       "LOCAL 0009 BRICKLAYERS & ALLIED CRAFTWORKERS PA...  0.017786  \n",
        "PGH FIRE FIGHTERS LOCAL #1 FIRE PAC                 0.012705  \n",
        "SALVO PAC                                           0.007877  \n",
+       "LOCAL 0433 UWUA (UTILITY WORKERS)                   0.002541  \n",
        "TEAMSTERS JT COUNCIL 40 PAC                         0.001270  \n",
        "TEAMSTERS LOCAL 205 PAC                             0.000508  "
       ]
@@ -1104,7 +1108,9 @@
     }
    ],
    "source": [
-    "joined[(joined.amount_wein.notna()) & (joined.amount_inna.isna()) & (joined.amount_lamb.notna())]"
+    "joined[\n",
+    "    (joined.amount_wein.notna()) & (joined.amount_inna.isna()) & (joined.amount_lamb.notna())\n",
+    "].sort_values(by='pct_lamb', ascending=False)"
    ]
   }
  ],
