Dump top Weinstein, Innamorato, Lamb contributors

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -650,6 +650,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "6287b0b4-bbc6-4ccb-a055-3011cb49caa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joined.to_csv('output/wein-inna-lamb-top.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "696cfb68-ad07-4603-a3a4-448b99fd315c",
    "metadata": {},
