Use hand-rolled CSV for Lamb's local cmte

--- a/cycle-7-analysis.ipynb
+++ b/cycle-7-analysis.ipynb
@@ -290,13 +290,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "382cb304-e7b1-46ab-86d7-394b2b4381c7",
+   "metadata": {},
+   "source": [
+    "##### Michael Lamb (local committee -- use hand-rolled CSV)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "fc249223-36cf-4ec9-ba80-0c3d9a128b98",
+   "execution_count": 10,
+   "id": "1b70d1ea-1567-4a42-83cb-82c591285fa4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lamb"
+    "df_lamb = pd.read_csv('input/Lamb_2022_C7.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bcf5961b-a90c-4adc-a0c0-51a144259c5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>amount_lamb</th>\n",
+       "      <th>pct_lamb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [name, amount_lamb, pct_lamb]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_lamb_topcontribs = df_lamb.groupby('name').amount_lamb.sum().to_frame().reset_index()\n",
+    "\n",
+    "lamb_sum = df_lamb.amount_lamb.sum()\n",
+    "df_lamb_topcontribs['pct_lamb'] = df_lamb_topcontribs.amount_lamb / lamb_sum\n",
+    "\n",
+    "df_lamb_topcontribs.sort_values(by='amount_lamb', ascending=False).head(10)"
    ]
   },
   {
