Use past donors to seed Lamb 2022 C7 key puncher

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -650,16 +650,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "6287b0b4-bbc6-4ccb-a055-3011cb49caa0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "joined.to_csv('output/wein-inna-lamb-top.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "id": "696cfb68-ad07-4603-a3a4-448b99fd315c",
    "metadata": {},
@@ -1121,6 +1111,42 @@
     "joined[\n",
     "    (joined.amount_wein.notna()) & (joined.amount_inna.isna()) & (joined.amount_lamb.notna())\n",
     "].sort_values(by='pct_lamb', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b5cbadf-f0cc-4135-a9d6-3653ec3f60d0",
+   "metadata": {},
+   "source": [
+    "### Output common donor list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d4b67b3c-f5c0-43df-a741-bb770a32db90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joined.to_csv('output/wein-inna-lamb-top.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3527c82-a14f-4618-92a0-a863b85c2a33",
+   "metadata": {},
+   "source": [
+    "### Output Lamb donor list, for use in C7 2022 analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c225734f-a72b-4e47-994d-f8473293e275",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_lamb_topcontribs.sort_values(by='pct_lamb', ascending=False)[['number', 'name']].to_csv('input/Lamb_2022_C7.csv', index=False)"
    ]
   }
  ],
