Add `amount_lamb` column

--- a/cycle-7-analysis.ipynb
+++ b/cycle-7-analysis.ipynb
@@ -299,17 +299,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "1b70d1ea-1567-4a42-83cb-82c591285fa4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_lamb = pd.read_csv('input/Lamb_2022_C7.csv')"
+    "df_lamb = pd.read_csv('input/Lamb_2022_C7.csv')\n",
+    "df_lamb = df_lamb[df_lamb.amount_lamb > 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "bcf5961b-a90c-4adc-a0c0-51a144259c5d",
    "metadata": {},
    "outputs": [
@@ -350,7 +351,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "edaacfaa-beb1-49d2-9cb5-1c41f927bf65",
    "metadata": {},
    "outputs": [],
